--- a/erpnext/accounts/doctype/pos_closing_entry/closing_voucher_details.html
+++ b/erpnext/accounts/doctype/pos_closing_entry/closing_voucher_details.html
@@ -1,11 +1,11 @@
 <div class="clearfix"></div>
 <div class="box">
-		<div class="grid-body">
+		<div class="grid-body" style="background-color: transparent;">
 			<div class="rows text-center">
 
 				<!-- Sales summary section -->
 				<div>
-						<h6 class="text-center uppercase" style="color: #8D99A6">{{ _("Sales Summary") }}</h6>
+						<h6 class="text-center uppercase">{{ _("Sales Summary") }}</h6>
 						<div class="tax-break-up" style="overflow-x: auto;">
 							<table class="table table-bordered table-hover">
 								<thead>
@@ -32,7 +32,7 @@
 
 				<!-- Mode of payment section -->
 				<div>
-						<h6 class="text-center uppercase" style="color: #8D99A6">{{ _("Mode of Payments") }}</h6>
+						<h6 class="text-center uppercase">{{ _("Mode of Payments") }}</h6>
 						<div class="tax-break-up" style="overflow-x: auto;">
 							<table class="table table-bordered table-hover">
 								<thead>
@@ -57,7 +57,7 @@
 				<!-- Taxes section -->
 				{% if data.taxes %}
 				<div>
-						<h6 class="text-center uppercase" style="color: #8D99A6">{{ _("Taxes") }}</h6>
+						<h6 class="text-center uppercase">{{ _("Taxes") }}</h6>
 						<div class="tax-break-up" style="overflow-x: auto;">
 							<table class="table table-bordered table-hover">
 								<thead>
